fix: add hillshade and terrain option to /api/style/{id} amd /api/style/{id}.json endpoints.
