# sites/geohub/src/routes/api/style/[id].json/+server.ts
@@ -30,12 +30,20 @@ export const GET: RequestHandler = async ({ params, url, locals }) => {
 		});
 	}
 
+	const hillshade = url.searchParams.get('hillshade') ?? 'false';
+	const isHillshade = hillshade.toLowerCase() === 'true';
+
+	const terrain = url.searchParams.get('terrain') ?? 'false';
+	const isTerrain = terrain.toLowerCase() === 'true';
+
 	const style = (await getStyleById(
 		styleId,
 		url,
 		user_email,
 		is_superuser,
-		basemap
+		basemap,
+		isHillshade,
+		isTerrain
 	)) as DashboardMapStyle;
 
 	if (!style) {
